--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -25,8 +26,34 @@
 
   <title>lab_movil_2222</title>
   <link rel="manifest" href="manifest.json">
+
 </head>
+
 <body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+  
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
+  
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAFvNurg0IOZb61Q9oK53zlJwJjMTu76E0",
+      authDomain: "lab-movil-2222.firebaseapp.com",
+      projectId: "lab-movil-2222",
+      storageBucket: "lab-movil-2222.appspot.com",
+      messagingSenderId: "590170055799",
+      appId: "1:590170055799:web:d941d8072773dcb81b9272",
+      measurementId: "G-CSG81E8Y9V"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -95,4 +122,5 @@
     }
   </script>
 </body>
+
 </html>
